--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -54,7 +54,7 @@ body {
     font-family: 'Roboto', sans-serif;
     margin: 0;
     padding: 0;
-    background-image: url('../assets/images/geometric-pattern.png'); /* Ensure this path is correct */
+    background-image: url('../../assets/images/geometric-pattern.png'); /* Ensure this path is correct */
     background-size: cover;
     background-attachment: fixed;
 }
@@ -99,17 +99,42 @@ nav ul li a:hover {
     color: #ff4081;
 }
 
+main {
+    padding: 20px;
+}
+
 section {
     padding: 20px;
     margin: 20px;
-    background: rgba(30, 30, 30, 0.9);
+    background: rgba(96, 96, 96, 0.9); /* Lighter grey background */
     border-radius: 10px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     margin-bottom: 40px;
     position: relative;
-    background-image: url('../assets/images/geometric-pattern.png'); /* Ensure this path is correct */
+    background-image: url('../../assets/images/geometric-pattern.png'); /* Ensure this path is correct */
     background-size: cover;
     background-blend-mode: overlay;
+}
+
+section::before, section::after {
+    content: '';
+    position: absolute;
+    top: 10px; /* Adjusted to create bracket effect */
+    bottom: 10px; /* Adjusted to create bracket effect */
+    width: 10px;
+    background-color: #ff4081;
+}
+
+section::before {
+    left: -20px;
+    border-radius: 10px 0 0 10px;
+    height: calc(100% - 20px); /* Adjusted to create bracket effect */
+}
+
+section::after {
+    right: -20px;
+    border-radius: 0 10px 10px 0;
+    height: calc(100% - 20px); /* Adjusted to create bracket effect */
 }
 
 section h2 {
@@ -179,10 +204,6 @@ button.open-modal {
 
 button.open-modal:hover {
     background-color: #e91e63;
-}
-
-main {
-    padding: 20px;
 }
 
 /* Text border for readability */
