--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -59,8 +59,8 @@ body {
     background-attachment: fixed;
 }
 
-h1, h2, h3 {
-    color: #2c3e50;
+h3 {
+    color: #2ba698;
 }
 
 header {
@@ -174,31 +174,6 @@ footer p {
     border-radius: 5px;
 }
 
-.contact-form {
-    display: flex;
-    flex-direction: column;
-}
-
-.contact-form input, .contact-form textarea {
-    margin-bottom: 10px;
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-}
-
-.contact-form button {
-    background: #2980b9;
-    color: #fff;
-    border: none;
-    padding: 10px;
-    border-radius: 5px;
-    cursor: pointer;
-}
-
-.contact-form button:hover {
-    background: #1a5276;
-}
-
 button.open-modal {
     background-color: #ff4081;
     border: none;
@@ -216,4 +191,9 @@ button.open-modal:hover {
 /* Text border for readability */
 section p, section a {
     text-shadow: 1px 1px 2px #000;
+}
+
+.obfuscated {
+    color: transparent;
+    text-shadow: 0 0 5px rgba(169, 169, 169, 0.5);
 }
